--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@solana/wallet-adapter-react-ui": "^0.9.34",
     "@solana/wallet-adapter-wallets": "^0.19.22",
     "@solana/web3.js": "^1.78.4",
+    "@sollinked/sdk": "^1.0.12",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "antd": "^5.9.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "bigint-buffer": "^1.1.5",
+    "encoding": "^0.1.13",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "moment": "^2.29.4",
@@ -29,6 +32,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
