--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "encoding": "^0.1.13",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.4.19",
     "postcss": "8.4.29",
@@ -38,5 +39,8 @@
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.198"
   }
 }
