--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
+    "sharp": "^0.32.5",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
