--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "lodash": "^4.17.21",
+    "lokijs": "^1.5.12",
     "moment": "^2.29.4",
     "next": "13.4.19",
+    "pino-pretty": "^10.2.0",
     "postcss": "8.4.29",
     "qs": "^6.11.2",
     "react": "18.2.0",
