--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p 3030",
-    "lint": "next lint"
+    "lint": "next lint --dir ."
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
@@ -19,7 +19,6 @@
     "@solana/wallet-adapter-react-ui": "^0.9.34",
     "@solana/wallet-adapter-wallets": "^0.19.22",
     "@solana/web3.js": "^1.78.4",
-    "@sollinked/sdk": "^1.1.3",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -29,8 +28,8 @@
     "bigint-buffer": "^1.1.5",
     "ckeditor5-custom-build": "file:ckeditor5",
     "encoding": "^0.1.13",
-    "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "html-to-react": "^1.6.0",
     "lodash": "^4.17.21",
     "lokijs": "^1.5.12",
     "moment": "^2.29.4",
@@ -50,5 +49,11 @@
   "devDependencies": {
     "@types/lodash": "^4.14.198",
     "@types/qs": "^6.9.8"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   }
 }
