Completed chat tags Changed some wordings

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@ckeditor/ckeditor5-react": "^6.1.0",
+    "@elusiv/sdk": "^0.1.23",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
     "@solana/spl-token": "^0.3.8",
@@ -19,7 +20,6 @@
     "@solana/wallet-adapter-react-ui": "^0.9.34",
     "@solana/wallet-adapter-wallets": "^0.19.22",
     "@solana/web3.js": "^1.78.4",
-    "@sollinked/sdk": "^1.2.2",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -27,10 +27,12 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "bigint-buffer": "^1.1.5",
+    "bignumber.js": "^9.1.2",
     "ckeditor5-custom-build": "file:ckeditor5",
     "encoding": "^0.1.13",
     "eslint-config-next": "13.4.19",
     "html-to-react": "^1.6.0",
+    "js-md5": "^0.8.3",
     "lodash": "^4.17.21",
     "lokijs": "^1.5.12",
     "moment": "^2.29.4",
