--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sollinked-nextjs",
-  "version": "2.2.2",
+  "version": "2.3.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^5.2.6",
     "@ckeditor/ckeditor5-react": "^6.1.0",
     "@elusiv/sdk": "^0.1.23",
+    "@jup-ag/wallet-adapter": "^0.1.5",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
     "@solana/spl-token": "^0.3.8",
@@ -20,7 +21,6 @@
     "@solana/wallet-adapter-react-ui": "^0.9.34",
     "@solana/wallet-adapter-wallets": "^0.19.22",
     "@solana/web3.js": "^1.78.4",
-    "@sollinked/sdk": "^1.2.4",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
